JSW Devsb/src/objects/State_MRM_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Depot_Actuals__c</fullName>
        <label>Depot Actuals</label>
        <summarizedField>State_Actuals__c.Depot_Actuals__c</summarizedField>
        <summaryForeignKey>State_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Direct_Actuals__c</fullName>
        <label>Direct Actuals</label>
        <summarizedField>State_Actuals__c.Direct_Actuals__c</summarizedField>
        <summaryForeignKey>State_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Month_Depot_Actuals__c</fullName>
        <label>Last Month Depot Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Direct_Actuals__c</fullName>
        <label>Last Month Direct Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_NSR_Qty_Actuals__c</fullName>
        <label>Last Month NSR Qty Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_NSR_Value_Actuals__c</fullName>
        <label>Last Month NSR Value Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Non_Trade_Actuals__c</fullName>
        <label>Last Month Non Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Rail_Actuals__c</fullName>
        <label>Last Month Rail Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Road_Actuals__c</fullName>
        <label>Last Month Road Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Month_Trade_Actuals__c</fullName>
        <label>Last Month Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSR_C_F_Value_Actual__c</fullName>
        <label>NSR C&amp;F Value Actual</label>
        <summarizedField>State_NSR_Actuals__c.NSR_C_F_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Discount_Value_Actuals__c</fullName>
        <label>NSR Discount Value Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_Discount_Value_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_MMC_Actuals__c</fullName>
        <label>NSR MMC Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_MMC_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Other_Actuals__c</fullName>
        <label>NSR Other Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_Other_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_PD_SPL_ADDL_Actual__c</fullName>
        <label>NSR PD+SPL+ADDL Actual</label>
        <summarizedField>State_NSR_Actuals__c.NSR_PD_SPL_ADDL_Actual__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_PFRT_Dump_Value_Actual__c</fullName>
        <label>NSR PFRT Dump Value Actual</label>
        <summarizedField>State_NSR_Actuals__c.NSR_PRFT_Dump_Value_Actual__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Packing_Cost_Actuals__c</fullName>
        <label>NSR Packing Cost Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_Packing_Cost_Actual__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Qty_Actuals__c</fullName>
        <label>NSR Qty Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_Qty_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Total_Basic_Price_Actuals__c</fullName>
        <label>NSR Total Basic Price Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_Total_Basic_Price_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSR_Value_Actuals__c</fullName>
        <label>NSR Value Actuals</label>
        <summarizedField>State_NSR_Actuals__c.NSR_Value_Actuals__c</summarizedField>
        <summaryForeignKey>State_NSR_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Trade_Actuals__c</fullName>
        <label>Non Trade Actuals</label>
        <summarizedField>State_Actuals__c.Non_Trade_Actuals__c</summarizedField>
        <summaryForeignKey>State_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inst PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inst OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rail_Actuals__c</fullName>
        <label>Rail Actuals</label>
        <summarizedField>State_Actuals__c.Rail_Actuals__c</summarizedField>
        <summaryForeignKey>State_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Road_Actuals__c</fullName>
        <label>Road Actuals</label>
        <summarizedField>State_Actuals__c.Road_Actuals__c</summarizedField>
        <summaryForeignKey>State_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State_Code_Text__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Depot_Target__c</fullName>
        <label>State  Depot Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Direct_Target__c</fullName>
        <label>State Direct Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_NSR_Quantity_Target__c</fullName>
        <label>State NSR Quantity Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Non_Trade_Target__c</fullName>
        <label>State Non Trade Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Rail_Target__c</fullName>
        <label>State Rail Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Road_Target__c</fullName>
        <label>State Road Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Target__c</fullName>
        <label>State Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Trade_Target__c</fullName>
        <label>State Trade Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>State MRM Targets</relationshipLabel>
        <relationshipName>State_MRM_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Actuals__c</fullName>
        <label>Trade Actuals</label>
        <summarizedField>State_Actuals__c.Trade_Actuals__c</summarizedField>
        <summaryForeignKey>State_Actuals__c.State_MRM_Targets__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Code_Last_Month__c</fullName>
        <formula>State_Code_Text__c +&apos;:&apos;+ TEXT(Product_Group__c) +&apos;:&apos;+ CASE(TEXT(Month__c), 
&quot;January&quot;, &quot;December&quot;, 
&quot;February&quot;, &quot;January&quot;, 
&quot;March&quot;,&quot;February&quot;, 
&quot;April&quot;,&quot;March&quot;, 
&quot;May&quot;,&quot;April&quot;, 
&quot;June&quot;,&quot;May&quot;, 
&quot;July&quot;,&quot;June&quot;, 
&quot;August&quot;,&quot;July&quot;, 
&quot;September&quot;,&quot;August&quot;, 
&quot;October&quot;,&quot;September&quot;, 
&quot;November&quot;,&quot;October&quot;, 
&quot;December&quot;,&quot;November&quot;, 
&quot;none&quot; ) +&apos;:&apos;+ IF(TEXT(Month__c)=&apos;January&apos;,TEXT(Year__c-1),TEXT(Year__c)) +&apos;:&apos;+ Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Code_Next_Month__c</fullName>
        <formula>State_Code_Text__c +&apos;:&apos;+ TEXT(Product_Group__c) +&apos;:&apos;+ 
CASE(TEXT(Month__c), 
&quot;January&quot;, &quot;February&quot;, 
&quot;February&quot;, &quot;March&quot;, 
&quot;March&quot;,&quot;April&quot;, 
&quot;April&quot;,&quot;May&quot;, 
&quot;May&quot;,&quot;June&quot;, 
&quot;June&quot;,&quot;July&quot;, 
&quot;July&quot;,&quot;August&quot;, 
&quot;August&quot;,&quot;September&quot;, 
&quot;September&quot;,&quot;October&quot;, 
&quot;October&quot;,&quot;November&quot;, 
&quot;November&quot;,&quot;December&quot;, 
&quot;December&quot;,&quot;January&quot;, 
&quot;none&quot; )+&apos;:&apos;+ IF(TEXT(Month__c)=&apos;December&apos;,TEXT(Year__c+1),TEXT(Year__c)) +&apos;:&apos;+ Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code Next Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <formula>State_Code_Text__c +&apos;:&apos;+ TEXT(Product_Group__c) +&apos;:&apos;+ TEXT(Month__c) +&apos;:&apos;+ TEXT(Year__c) +&apos;:&apos;+ Plant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State MRM Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State MRM Targets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State MRM Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>